fix overflow problem

--- a/gcp/website/frontend3/src/triage.scss
+++ b/gcp/website/frontend3/src/triage.scss
@@ -87,6 +87,7 @@
   word-wrap: break-word;
   font-family: "Overpass Mono", monospace;
   font-size: 13px;
+  overflow-wrap: anywhere;
   margin: 0;
   color: #d4d4d4;
 
